# awqward-bomberman

./: .gitignore  Cargo.toml  README.md
.github/workflows/: integration.yml  release.yml
assets/scenes/: load_scene_example.scn.ron
docs/: game.js  script.js
src/: lib.rs
src/model/: atlas.rs  bomb.rs  destructable.rs  explosion.rs  mod.rs
src/models/: atlas.rs  bomb.rs  destructable.rs  explosion.rs  mod.rs  player.rs
src/system/: collision.rs  end_game.rs  explode_bomb.rs  explosion_clear.rs  explosion_expand.rs  explosion_kill.rs  explosion_stop_expand.rs  gamepad.rs  input.rs  mod.rs  movement.rs  place_bomb.rs  scene.rs  setup.rs
src/utils/: collide_aabb.rs  mod.rs
web/: index.html
