[package]
name = "awqward-bomberman"
version = "0.1.0"
edition = "2021"
default-run = "game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
color-eyre = { version = "0.6.1", default-features = false }
dotenv = "0.15.0"
